<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:text="@string/header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    <Button
        android:id="@+id/popular_movies_button"
        style="@style/app_buttons"
        android:text="@string/popular_movies"
        android:onClick="openMoviesApp"/>

    <Button
        android:id="@+id/stock_hawk_button"
        style="@style/app_buttons"
        android:text="@string/stock_hawk"
        android:onClick="openStockApp"/>

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/app_buttons"
        android:text="@string/build_it_bigger"
        android:onClick="openBuildApp"/>

    <Button
        android:id="@+id/make_your_app_material_button"
        style="@style/app_buttons"
        android:text="@string/make_your_app_material"
        android:onClick="openMaterialApp"/>

    <Button
        android:id="@+id/go_ubiquitous_button"
        style="@style/app_buttons"
        android:text="@string/go_ubiquitous"
        android:onClick="openUbiquitousApp"/>

    <Button
        android:id="@+id/capstone_button"
        style="@style/app_buttons"
        android:text="@string/capstone"
        android:onClick="openCapstoneApp"/>

    </LinearLayout>
</LinearLayout>
